<resources>
    <string name="app_name">S.H.I.E.L.D.</string>
    <string name="unable_to_get_agents">Unable to get agents</string>
    <string name="access_system">Access the system</string>
    <string name="access_code_hint">Access code</string>
    <string name="password_hint">Password</string>
    <string name="bt_access_text">Access</string>
    <string name="access_code_required">The access code is required</string>
    <string name="password_is_required">The password is required</string>
    <string name="access_denied">Access denied</string>
    <string name="level">Level:</string>
    <string name="email" translatable="false">Email:</string>
    <string name="location">Location:</string>
    <string name="unable_to_get_missions">Unable to get agent missions</string>
    <string name="missions">Missions</string>
    <string name="mission" translatable="false">%1$s - %2$s - %3$s</string>
</resources>