<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgentActivity">

    <TextView
        android:id="@+id/tv_agent_name"
        style="@style/AgentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_level_label"
        style="@style/Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_agent_name" />

    <TextView
        android:id="@+id/tv_agent_access_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_level_label"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintLeft_toRightOf="@id/tv_level_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_agent_name" />

    <TextView
        android:id="@+id/tv_email_label"
        style="@style/Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_agent_access_level" />

    <TextView
        android:id="@+id/tv_agent_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_email_label"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintLeft_toRightOf="@id/tv_email_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_agent_access_level" />

    <TextView
        android:id="@+id/tv_location_label"
        style="@style/Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email_label" />

    <TextView
        android:id="@+id/tv_agent_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_location_label"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintLeft_toRightOf="@id/tv_location_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_agent_email" />

    <TextView
        android:id="@+id/tv_missions_label"
        style="@style/Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/missions"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_location_label" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/tv_missions_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/missions_layout"/>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>